Fix z-index interleaving

--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -6,7 +6,7 @@
 
 #filter-container {
 	text-align: center;
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	top: 80px;
 	z-index: 3;
