--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -33,7 +33,7 @@ label {
 	position: fixed;
 	padding: @spacingWide @spacingWide 0 @spacingWide;
 	width: 100%;
-	z-index: 3;
+	z-index: 4;
 
 	.navbar {
 		margin: 0;
